force-app/main/default/objects/Cost_Routing_Outside__c/Cost_Routing_Outside__c.object-meta.xml
<CustomObject>
    <label>Cost_Routing_Outside</label>
    <nameField>
        <label>Cost_Routing_Outside</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Cost_Routing_Outside</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>