force-app/main/default/objects/Cost_Routing_Outside__c/fields/Outside_Cost__c.field-meta.xml
<CustomField>
    <fullName>Outside_Cost__c</fullName>
    <label>Outside Cost</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>