force-app/main/default/objects/Cost_Routing_Outside__c/fields/PAINT__c.field-meta.xml
<CustomField>
    <fullName>PAINT__c</fullName>
    <label>PAINT</label>
    <length>255</length>
    <type>Text</type>
</CustomField>