force-app/main/default/objects/Cost_Routing_Outside__c/fields/Site__c.field-meta.xml
<CustomField>
    <fullName>Site__c</fullName>
    <label>Site</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>