force-app/main/default/objects/Cost_Routing_Outside__c/fields/StdOpName__c.field-meta.xml
<CustomField>
    <fullName>StdOpName__c</fullName>
    <label>StdOpName</label>
    <length>255</length>
    <type>Text</type>
</CustomField>