force-app/main/default/objects/Cost_Routing_Outside__c/fields/SZC__c.field-meta.xml
<CustomField>
    <fullName>SZC__c</fullName>
    <label>SZC</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>