force-app/main/default/objects/Cost_Routing_Outside__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>StdOpName__c</columns>
    <columns>Site__c</columns>
    <columns>PTC__c</columns>
    <columns>SZC__c</columns>
    <columns>PAINT__c</columns>
    <columns>Outside_Cost__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Records</label>
</ListView>